Redesign boot sequence ASCII art - EZ.QL with hacker terminal frame

--- a/estudos-javascript/HACKFOLIO/index.html
+++ b/estudos-javascript/HACKFOLIO/index.html
@@ -28,20 +28,31 @@
         <div class="boot-container">
             <div class="boot-logo">
                 <pre class="ascii-art" id="asciiArt">
-███████╗███████╗███████╗ ██████╗ ██╗   ██╗██╗███████╗██╗     
-██╔════╝╚══███╔╝██╔════╝██╔═══██╗██║   ██║██║██╔════╝██║     
-█████╗    ███╔╝ █████╗  ██║   ██║██║   ██║██║█████╗  ██║     
-██╔══╝   ███╔╝  ██╔══╝  ██║▄▄ ██║██║   ██║██║██╔══╝  ██║     
-███████╗███████╗███████╗╚██████╔╝╚██████╔╝██║███████╗███████╗
-╚══════╝╚══════╝╚══════╝ ╚══▀▀═╝  ╚═════╝ ╚═╝╚══════╝╚══════╝
+        ╔══════════════════════════════════════════════╗
+        ║  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ║
+        ╠══════════════════════════════════════════════╣
+        ║                                              ║
+        ║    ████████╗ ███████╗    ██████╗  ██╗        ║
+        ║    ╚══════╝  ╚════██║    ██╔═══██╗██║        ║
+        ║    ██████╗      ██╔╝     ██║   ██║██║        ║
+        ║    ╚═════╝     ██╔╝   ██╗██║▄▄ ██║██║        ║
+        ║    ████████╗  ███████╗╚═╝╚██████╔╝███████╗   ║
+        ║    ╚═══════╝  ╚══════╝    ╚══▀▀═╝ ╚══════╝   ║
+        ║                                              ║
+        ║          「 S Y S T E M    」               ║
+        ║          「 A R C H I T E C T 」               ║
+        ║                                              ║
+        ╠══════════════════════════════════════════════╣
+        ║  ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓  ║
+        ╚══════════════════════════════════════════════╝
                 </pre>
             </div>
             <div class="boot-terminal">
-                <div class="boot-line" id="bootLine1">[SYSTEM] Initializing kernel...</div>
-                <div class="boot-line" id="bootLine2">[OK] Loading modules...</div>
-                <div class="boot-line" id="bootLine3">[OK] Establishing secure connection...</div>
-                <div class="boot-line" id="bootLine4">[OK] Decrypting portfolio data...</div>
-                <div class="boot-line" id="bootLine5">[SUCCESS] Access granted. Welcome.</div>
+                <div class="boot-line" id="bootLine1">[SYS] ░▒▓ BREACHING MAINFRAME ▓▒░</div>
+                <div class="boot-line" id="bootLine2">[OK] Injecting payload modules...</div>
+                <div class="boot-line" id="bootLine3">[OK] Bypassing firewall protocols...</div>
+                <div class="boot-line" id="bootLine4">[OK] Extracting classified data...</div>
+                <div class="boot-line" id="bootLine5">[ROOT] ◉ ACCESS GRANTED ◉ Welcome, Operator.</div>
             </div>
             <div class="boot-progress">
                 <div class="boot-progress-bar" id="bootProgressBar"></div>
