Fix Portuguese translations - add nav, boot sequence, and missing i18n attributes

--- a/estudos-javascript/HACKFOLIO/index.html
+++ b/estudos-javascript/HACKFOLIO/index.html
@@ -48,11 +48,11 @@
                 </pre>
             </div>
             <div class="boot-terminal">
-                <div class="boot-line" id="bootLine1">[SYS] ░▒▓ BREACHING MAINFRAME ▓▒░</div>
-                <div class="boot-line" id="bootLine2">[OK] Injecting payload modules...</div>
-                <div class="boot-line" id="bootLine3">[OK] Bypassing firewall protocols...</div>
-                <div class="boot-line" id="bootLine4">[OK] Extracting classified data...</div>
-                <div class="boot-line" id="bootLine5">[ROOT] ◉ ACCESS GRANTED ◉ Welcome, Operator.</div>
+                <div class="boot-line" id="bootLine1" data-i18n="boot.line1">[SYS] ░▒▓ BREACHING MAINFRAME ▓▒░</div>
+                <div class="boot-line" id="bootLine2" data-i18n="boot.line2">[OK] Injecting payload modules...</div>
+                <div class="boot-line" id="bootLine3" data-i18n="boot.line3">[OK] Bypassing firewall protocols...</div>
+                <div class="boot-line" id="bootLine4" data-i18n="boot.line4">[OK] Extracting classified data...</div>
+                <div class="boot-line" id="bootLine5" data-i18n="boot.line5">[ROOT] ◉ ACCESS GRANTED ◉ Welcome, Operator.</div>
             </div>
             <div class="boot-progress">
                 <div class="boot-progress-bar" id="bootProgressBar"></div>
@@ -86,7 +86,7 @@
             
             <div class="nav-status">
                 <span class="status-dot"></span>
-                <span class="status-text">SYSTEM ONLINE</span>
+                <span class="status-text" data-i18n="nav.status">SYSTEM ONLINE</span>
             </div>
 
             <!-- Language Toggle -->
@@ -105,30 +105,30 @@
                 <li class="nav-item">
                     <a href="#about" class="nav-link" data-index="01">
                         <span class="link-index">01.</span>
-                        <span class="link-text">about()</span>
+                        <span class="link-text" data-i18n="nav.about">about()</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#skills" class="nav-link" data-index="02">
                         <span class="link-index">02.</span>
-                        <span class="link-text">skills()</span>
+                        <span class="link-text" data-i18n="nav.skills">skills()</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#projects" class="nav-link" data-index="03">
                         <span class="link-index">03.</span>
-                        <span class="link-text">projects()</span>
+                        <span class="link-text" data-i18n="nav.projects">projects()</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#experience" class="nav-link" data-index="04">
                         <span class="link-index">04.</span>
-                        <span class="link-text">experience()</span>
+                        <span class="link-text" data-i18n="nav.experience">experience()</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-link cta-link">
-                        <span class="link-text">contact()</span>
+                        <span class="link-text" data-i18n="nav.contact">contact()</span>
                         <span class="link-arrow">→</span>
                     </a>
                 </li>
