Teste de dentro d o VSCode

--- a/estudos-javascript/HACKFOLIO/index.html
+++ b/estudos-javascript/HACKFOLIO/index.html
@@ -214,7 +214,7 @@
                         <div class="hex-border"></div>
                         <div class="hex-glow"></div>
                         <div class="profile-image">
-                            <img src="../PORTFOLIOGPT/foto-perfil.jpg" alt="Ezequiel Lima" id="profileImg">
+                            <img src="foto-perfil.jpg" alt="Ezequiel Lima" id="profileImg">
                             <div class="profile-overlay"></div>
                             <div class="profile-scanline"></div>
                         </div>
